# distributed-inference-engine

./: .gitignore  README.md  TESTING.md  inference-engine.md  start.sh  test_inference.py  test_inference.sh
coordinator/: .gitignore  package-lock.json  package.json
coordinator/src/: capacity.ts  health.ts  healthTable.ts  infer.ts  scheduler.ts  server.ts  sessionTracker.ts  streamMetrics.ts  types.ts
docs/: ARCHITECTURE.md  COORDINATOR.md  FAILURE_MODES.md  HEARTBEAT.md  INVARIANTS.md  KV_CACHE.md  OBSERVABILITY.md  SHEDULER.md  STREAMING.md  WORKER.md
protocol/: inference.http.md  types.md
worker/: Cargo.toml  build-with-llvm.sh
worker/src/: cache.rs  heartbeat.rs  http.rs  main.rs  metrics.rs  model.rs  state.rs  stream.rs
