[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"

